# USU-LLM-Class

./: .gitignore  Application.py  Assignment3.md  Assn10.ipynb  Assn10_v2.ipynb  Assn8.ipynb  BPEtokenizer.py  Colab_LoRA_Unsloth_API(1).ipynb  DataLoader.py  Dockerfile  Explanation.txt  Homework assignment 3  Implementation.ipynb  Modelfile  README.md  README.txt  RileyAssn6.ipynb  RileyAssn7.ipynb  SW_EpisodeIV_VI.json  TrialnError.ipynb  Untitled.ipynb  adapter_config.json  agent.py  answers.txt  answersWithVectorDB.txt  answersWithoutAgent.txt  app.py  application.py  assgn4.py  assn10.py  assn10_v2.py  assn2.py  assn3.py  assn5.ipynb  assn8.py  assn9_apple.ipynb  assn9_bad_file.ipynb  assn9_cookies.ipynb  assn9_dumb.ipynb  assn9_dumb_final.py  (+86 more)
.ipynb_checkpoints/: TrialnError-checkpoint.ipynb  run-checkpoint.py
.plandex/: project.json
.zen/: config.yaml
HF DS Gradio app repo/: app.py  guidance_helper.py  requirements.txt  test_guidance.py
HW1/: run.py
HW2/: Compare_Tokenizers.ipynb  README.md  Tokenizer_BPE.py  Tokenizer_Smiple.py  _README.md  run.py
HW3/: run.py
dspy_program/: metadata.json  program.json  program.pkl
logs/: events.out.tfevents.1741043642.Eliass-MacBook-Air.local.44382.0  events.out.tfevents.1741044726.Eliass-MacBook-Air.local.44619.0  events.out.tfevents.1741063731.Eliass-MacBook-Air.local.46556.0
model/: Modelfile
notebooks/: project_notebook.py
src/: SampleDataset.py  _showyourwork.sqlite  agent.py  app.py  best_model.pth  colab_script.py  create_index.py  dataloader.py  evaluator.py  get_requests.py  initalize_api.py  nn.py  (+12 more)
(+51 files in other folders)
