[project]
name = "usu-llm-class"
version = "0.1.0"
description = "Repository for USU LLM Class DSAI-5810/6810"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.25.0",
    "zenml[server]>=0.73.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.3",
]
